--- a/driver-extras/pom.xml
+++ b/driver-extras/pom.xml
@@ -15,28 +15,54 @@
       limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.datastax.cassandra</groupId>
     <artifactId>cassandra-driver-parent</artifactId>
+    <groupId>com.datastax.cassandra</groupId>
     <version>3.0.0-beta1-SNAPSHOT</version>
   </parent>
-  <artifactId>cassandra-driver-mapping</artifactId>
-  <packaging>bundle</packaging>
-  <name>DataStax Java Driver for Apache Cassandra - Object Mapping</name>
-  <description>Object mapper for the DataStax CQL Java Driver.</description>
+  <modelVersion>4.0.0</modelVersion>
+
+  <artifactId>cassandra-driver-extras</artifactId>
+
+  <name>DataStax Java Driver for Apache Cassandra - Extras</name>
+  <description>Extended functionality for the Java driver.</description>
   <url>https://github.com/datastax/java-driver</url>
-  
+
   <properties>
     <main.basedir>${project.parent.basedir}</main.basedir>
+    <test.groups>unit</test.groups>
+    <jdk8.excludes>none</jdk8.excludes>
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>com.datastax.cassandra</groupId>
       <artifactId>cassandra-driver-core</artifactId>
       <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.5.3</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.8.1</version>
+      <optional>true</optional>
     </dependency>
 
     <dependency>
@@ -75,28 +101,62 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-all</artifactId>
-      <version>5.0.3</version>
-      <scope>test</scope>
-    </dependency>
-    <!--
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>4.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-util</artifactId>
-      <version>4.1</version>
-    </dependency>
-  -->
   </dependencies>
 
   <build>
+
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>${jdk8.excludes}</exclude>
+          </excludes>
+          <testExcludes>
+            <exclude>${jdk8.excludes}</exclude>
+          </testExcludes>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <configuration>
+          <!--
+          There is no support for JDK 8 yet, see
+          https://github.com/mojohaus/animal-sniffer/issues/1
+          -->
+          <skip>true</skip>
+          <signature>
+            <groupId>org.codehaus.mojo.signature</groupId>
+            <artifactId>java18</artifactId>
+            <version>1.0</version>
+          </signature>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <groups>${test.groups}</groups>
+          <useFile>false</useFile>
+          <systemPropertyVariables>
+            <cassandra.version>${cassandra.version}</cassandra.version>
+            <ipprefix>${ipprefix}</ipprefix>
+          </systemPropertyVariables>
+          <classpathDependencyExcludes>
+            <classpathDependencyExcludes>io.netty:netty-transport-native-epoll</classpathDependencyExcludes>
+          </classpathDependencyExcludes>
+          <excludes>
+            <exclude>${jdk8.excludes}</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
@@ -113,7 +173,7 @@
         </executions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName>com.datastax.driver.mapping</Bundle-SymbolicName>
+            <Bundle-SymbolicName>com.datastax.driver.extras</Bundle-SymbolicName>
             <Bundle-Version>${project.version}</Bundle-Version>
             <_include>-osgi.bnd</_include>
           </instructions>
@@ -124,83 +184,48 @@
           </supportedProjectTypes>
         </configuration>
       </plugin>
+
     </plugins>
+
   </build>
-  
+
   <profiles>
-    <profile>
-      <id>default</id>
-      <properties>
-        <env>default</env>
-      </properties>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14</version>
-            <configuration>
-              <groups>unit</groups>
-              <useFile>false</useFile>
-              <systemPropertyVariables>
-                <cassandra.version>${cassandra.version}</cassandra.version>
-                <ipprefix>${ipprefix}</ipprefix>
-              </systemPropertyVariables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
 
     <profile>
       <id>short</id>
       <properties>
-        <env>default</env>
+        <test.groups>unit,short</test.groups>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14</version>
-            <configuration>
-              <groups>unit,short</groups>
-              <useFile>false</useFile>
-              <systemPropertyVariables>
-                <cassandra.version>${cassandra.version}</cassandra.version>
-                <ipprefix>${ipprefix}</ipprefix>
-              </systemPropertyVariables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
     <profile>
       <id>long</id>
       <properties>
-        <env>default</env>
+        <test.groups>unit,short,long</test.groups>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14</version>
-            <configuration>
-              <groups>unit,short,long</groups>
-              <useFile>false</useFile>
-              <systemPropertyVariables>
-                <cassandra.version>${cassandra.version}</cassandra.version>
-                <ipprefix>${ipprefix}</ipprefix>
-              </systemPropertyVariables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
+    </profile>
+
+    <!--
+    This profile excludes all JDK 8 dependent classes from
+    compilation.
+    Use this when running tests with a legacy JDK (6 or 7)
+    by including the following switch in the command line:
+    -DlegacyJdk=true
+    If running short tests, do not forget to also include the ccm.java.home switch.
+    Example:
+    mvn clean test -Dccm.java.home=$JAVA_HOME -DlegacyJdk=true -Pshort
+    -->
+    <profile>
+      <id>legacy-jdk</id>
+      <activation>
+        <property>
+          <name>legacyJdk</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <properties>
+        <jdk8.excludes>**/jdk8/*.java</jdk8.excludes>
+      </properties>
     </profile>
 
   </profiles>
@@ -227,5 +252,5 @@
       <organization>DataStax</organization>
     </developer>
   </developers>
-</project>
 
+</project>
