--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
   <modules>
     <module>driver-core</module>
     <module>driver-mapping</module>
+    <module>driver-extras</module>
     <module>driver-examples</module>
     <module>driver-dse</module>
     <module>driver-dist</module>
@@ -57,6 +58,7 @@
     <testng.version>6.8.8</testng.version>
     <assertj.version>1.7.0</assertj.version>
     <mockito.version>1.10.8</mockito.version>
+    <commons-exec.version>1.3</commons-exec.version>
     <scassandra.version>0.10.0</scassandra.version>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
@@ -93,13 +95,20 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.3</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
           <optimize>true</optimize>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
+          <!--
+          Avoids warnings when cross-compiling to older source levels, see
+          https://blogs.oracle.com/darcy/entry/bootclasspath_older_source
+          -->
+          <compilerArgument>-Xlint:-options</compilerArgument>
+          <!-- this actually means: use incremental compilation -->
+          <useIncrementalCompilation>false</useIncrementalCompilation>
         </configuration>
       </plugin>
       <plugin>
@@ -146,7 +155,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
-        <version>2.6.1</version>
+        <version>2.7</version>
         <executions>
           <execution>
             <phase>compile</phase>
@@ -166,6 +175,19 @@
             <exclude>com/datastax/driver/core/Connection$*</exclude>
           </excludes>
         </configuration>
+        <!--
+        Workaround to make clirr plugin work with Java 8.
+        The bug is actually in the BCEL library,
+        see https://issues.apache.org/jira/browse/BCEL-173.
+        See also https://github.com/RichardWarburton/lambda-behave/issues/31#issuecomment-86052095
+        -->
+        <dependencies>
+          <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>bcel-findbugs</artifactId>
+            <version>6.0</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -223,6 +245,27 @@
                 <currentYear>${currentYear}</currentYear>
               </properties>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <version>1.14</version>
+        <configuration>
+          <signature>
+            <groupId>org.codehaus.mojo.signature</groupId>
+            <artifactId>java16</artifactId>
+            <version>1.0</version>
+          </signature>
+        </configuration>
+        <executions>
+          <execution>
+            <id>check</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
