--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,11 @@ cassandra:
   - 2.2
   - 3.0
 build:
+  - script: |
+    #!/usr/bin/env bash
+    set -x
+    version=$($JAVA_HOME/bin/java -version 2>&1 | awk -F '"' '/version/ {print $2}')
+    export LEGACY_JDK="$(if [[ $version == 1.6* || $version == 1.7* ]]; then echo true; else echo false; fi)"
   - type: maven
     version: 3.2.5
     goals: clean compile test --fail-never -Plong
@@ -19,6 +24,7 @@ build:
       com.datastax.driver.NEW_NODE_DELAY_SECONDS=100
       cassandra.version=$CCM_CASSANDRA_VERSION
       ccm.java.home=$CCM_JAVA_HOME
+      legacyJdk=$LEGACY_JDK
   - xunit:
     - "**/target/surefire-reports/TEST-*.xml"
     - "**/target/failsafe-reports/TEST-*.xml" 
