--- a/driver-core/pom.xml
+++ b/driver-core/pom.xml
@@ -144,7 +144,7 @@
       <artifactId>netty-tcnative</artifactId>
       <version>1.1.33.Fork10</version>
       <classifier>${os.detected.classifier}</classifier>
-      <optional>true</optional>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
