--- a/driver-examples/stress/pom.xml
+++ b/driver-examples/stress/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.datastax.cassandra</groupId>
     <artifactId>cassandra-driver-examples-parent</artifactId>
-    <version>3.0.0-beta1-SNAPSHOT</version>
+    <version>3.0.0-beta1-sih-set-ks-SNAPSHOT</version>
   </parent>
   <artifactId>cassandra-driver-examples-stress</artifactId>
   <packaging>jar</packaging>
